[gd_scene load_steps=6 format=3 uid="uid://byxqky0xcf6f7"]

[ext_resource type="Script" path="res://scripts/scene 0.gd" id="1_2ysv2"]
[ext_resource type="FontFile" uid="uid://ko765ky2v5fg" path="res://fonts/Frijole-Regular.ttf" id="1_xxtno"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xng4w"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tblya"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8hw4t"]

[node name="scene 6" type="CanvasLayer"]
script = ExtResource("1_2ysv2")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 963.0
offset_bottom = 605.0
color = Color(0, 0, 0, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
offset_right = 963.0
offset_bottom = 601.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0.615686, 0, 0, 0.741176)
theme_override_fonts/normal_font = ExtResource("1_xxtno")
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[center]Lurking Shadows"
fit_content = true
autowrap_mode = 0

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_xxtno")
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxEmpty_xng4w")
theme_override_styles/hover = SubResource("StyleBoxEmpty_tblya")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_8hw4t")
text = "Start"

[connection signal="mouse_entered" from="CenterContainer/VBoxContainer/Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="CenterContainer/VBoxContainer/Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
